--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,7 @@
-aiohttp==3.8.1
+aiogram==3.18.0
 opencv-python==4.11.0.86
-gunicorn
+numpy==2.2.3
+fastapi==0.115.11
+uvicorn==0.34.0
+aiohttp==3.11.13
+aiofiles<24.2,>=23.2.1
