--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 aiogram==3.18.0
 opencv-python==4.11.0.86
-numpy==1.21.2
-fastapi==0.115.11
+numpy==1.24.3
+fastapi==0.115.1
 uvicorn==0.34.0
-aiohttp==3.11.13
-aiofiles<24.2,>=23.2.1
+aiohttp==3.11.3
+aiofiles==23.2.1
